--- a/Demovideo/css/component.css
+++ b/Demovideo/css/component.css
@@ -311,16 +311,17 @@
 
 .grid__item-title {
 	font-family: 'Caveat', cursive;
-	line-height: 1;
-	position: relative;
-	overflow: hidden;
-	margin: 0;
-	padding: 1em 0.5em;
-	text-align: left;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	color: #698b8d;
-	background: #fff;
+    line-height: 1;
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+    padding: 1em 0.5em;
+    text-align: left;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: rgb(191,163,105);
+    background: #fff;
+    left: -16px;
 }
 
 /* Loader (styles defined in square-loader.min.css) */
